# imdd-task

./: .gitreview  CITATION.cff  README.md  SSMF_Task.ipynb  imdd_model.ipynb  params.json  pyproject.toml  snn_rf_demapping.ipynb
examples/: IMDD_model.ipynb  LCD_Task.ipynb  SSMF_Task.ipynb
src/IMDD/: __init__.py  channel_model.py  dataset.py  helpers.py  model.py
tests/: test_imdd_dataset.py
