[build-system]
requires = ["setuptools"]

[project]
name = "imdd-task"
authors = [
  { name="Electronic Vision(s)", email="visions-dev@kip.uni-heidelberg.de" },
]
description = "The IMDD Task package provides an IM/DD channel implementation and two predefined dataset for training demappers / equalizers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
version = "0.0.1"
dependencies = [
  "torch==2.0.0",
  "numpy<2",
  "norse==1.1.0",
  "matplotlib>=3.7.1",
]

[project.urls]
"Homepage" = "https://github.com/imdd-task/imdd-task"
"Bug Tracker" = "https://github.com/imdd-task/imdd-task/issues"

[tool.setuptools.packages.find]
where = ["src/IMDD"]
